@@ -112,7 +112,7 @@ if test "x$enable_python" = "xno" ; then
 else
   AC_MSG_NOTICE([Checking to see if we can build Python bindings])
   have_python=no
-  AM_PATH_PYTHON(2.2)
+  AM_PATH_PYTHON(2.3)
 
   if test "x$PYTHON" = "x" ; then
     AC_MSG_WARN([Python not found])
